the font is technically added but not showing correct..yet

--- a/src/index.css
+++ b/src/index.css
@@ -112,3 +112,8 @@ body {
   src: local("Poppins Extra Bold"),
     url("fonts/Poppins-ExtraBold.ttf") format("ttf");
 }
+@font-face {
+  font-family: "Laborate";
+  src: local("Laborate"), 
+    url("fonts/Laborate.ttf") format("ttf");
+}
